--- a/views/newGame.html
+++ b/views/newGame.html
@@ -8,7 +8,7 @@
         <header>
             <div class="main">
                 <div class="logo">
-                    <img src="#">
+                    <img src="TreeCode-Logo.png">
                 </div>
                 <ul>
                     <li class="active"><a href="file:///C:/Users/Jasvir/Desktop/TreeCode/home.html">Home</a></li>
