--- a/views/newGame.html
+++ b/views/newGame.html
@@ -11,7 +11,7 @@
                     <img src="TreeCode-Logo.png">
                 </div>
                 <ul>
-                    <li class="active"><a href="file:///C:/Users/Jasvir/Desktop/TreeCode/home.html">Home</a></li>
+                    <li class="active"><a onclick="navigate('')">Home</a></li>
                     <li><a href="https://onetreeplanted.org/products/plant-trees">Donate</a></li>
                 </ul>
             </div>
