--- a/views/scoreBoard.html
+++ b/views/scoreBoard.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TreeCode</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <title>Lobby</title>
+        <link rel="stylesheet" type="text/css" href="css/style2.css">
     </head>
     <body>
         <header>
@@ -16,14 +16,13 @@
                 </ul>
             </div>
             <div class="title">
-                <h1>TreeCode</h1>
+                <h1>Scoreboard</h1>
+                <h2 id='phrase'></h2>
             </div>
-
-            <div class="button">
-                <a onclick="navigate('new')" class="btn">NEW GAME</a>
-                <a onclick="navigate('join')" class="btn">JOIN GAME</a>
-            </div>
+        <div class="players">  
+        </div>
         </header>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
         <script src="./views/script.js"></script>
     </body>
 </html>
